# firestore-fastapi

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  config.py  database.py  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yaml
docker/: .dockerignore  Dockerfile
docker/test/: .dockerignore  Dockerfile
docs/: README.md  cloudrun-firestore-deployment.md
firestorefastapi/: __init__.py  database.py  gunicorn_config.py  main.py
firestorefastapi/daos/: item.py
firestorefastapi/routers/: health.py  item.py
firestorefastapi/schemas/: item.py
firestorefastapi/services/: item.py
scripts/: docker-build.sh  docker-push.sh  docker-run.sh  format.sh  lint.sh  run-gunicorn.sh  run-uvicorn.sh  test.sh
tests/: conftest.py  test_gunicorn_config.py  test_health.py  test_items.py
tests/v1/: factories.py
v1/daos/: item.py
v1/routers/: item.py
v1/schemas/: item.py
v1/services/: item.py
